# dip-dab

./: .gitignore  CMakeLists.txt  README.md
notes/: todo.md
src/: CMakeLists.txt  decode_png.cpp  decoder.h  encoder.h  filter.h  greyscale_processor.h  image.h  image.hpp  imageDecoder.cpp  imageDecoder.hpp  imageEncoder.cpp  imageEncoder.hpp  imageHandler.cpp  imageHandler.hpp  kernel.hpp  main.cpp  mean_blur_processor.h  pixel.h  pixel.hpp
src/lodepng/: README.md
